crates/reddb-wire/tests/snapshots/parser_snapshots__grpc_no_host.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"grpc://\")"
---
input: "grpc://"
kind:  InvalidUri
error: INVALID_URI: grpc:// URI is missing a host
