crates/reddb-wire/tests/snapshots/parser_snapshots__http_no_host.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"http://\")"
---
input: "http://"
kind:  InvalidUri
error: INVALID_URI: empty host: http://
