crates/reddb-wire/tests/snapshots/parser_snapshots__missing_scheme.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"primary.svc:5050\")"
---
input: "primary.svc:5050"
kind:  UnsupportedScheme
error: UNSUPPORTED_SCHEME: unsupported scheme: primary.svc
