crates/reddb-wire/tests/snapshots/parser_snapshots__only_question_mark.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"?route=primary\")"
---
input: "?route=primary"
kind:  InvalidUri
error: INVALID_URI: relative URL without a base: ?route=primary
