crates/reddb-wire/tests/snapshots/parser_snapshots__port_negative.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"red://host:-1\")"
---
input: "red://host:-1"
kind:  InvalidUri
error: INVALID_URI: invalid port number: red://host:-1
