crates/reddb-wire/tests/snapshots/parser_snapshots__port_non_numeric.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"red://host:nope\")"
---
input: "red://host:nope"
kind:  InvalidUri
error: INVALID_URI: invalid port number: red://host:nope
