crates/reddb-wire/tests/snapshots/parser_snapshots__port_overflow.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"red://host:99999\")"
---
input: "red://host:99999"
kind:  InvalidUri
error: INVALID_URI: invalid port number: red://host:99999
