crates/reddb-wire/tests/snapshots/parser_snapshots__red_no_host.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"red://\")"
---
input: "red://"
kind:  InvalidUri
error: INVALID_URI: red:// URI is missing a host
