crates/reddb-wire/tests/snapshots/parser_snapshots__reds_no_host.snap
---
source: crates/reddb-wire/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"reds://\")"
---
input: "reds://"
kind:  InvalidUri
error: INVALID_URI: red:// URI is missing a host
